# namapn-council

./: .gitignore  README.md  compose.yml
dbt/: Makefile  dbt_project.yml  packages.yml  pyproject.toml
dbt/models/: bom_trees.sql  companies.sql  customers.sql  finished_goods.sql  forecasts.yml  items.sql  lines.sql  masters.yml  materials.sql  production_forecasts.sql  production_plan.sql  resource_forecasts.sql  routing_forecasts.sql  routings.sql  sales_forecasts.sql  sales_plans.sql  storages.sql  times.sql  transactions.sql  transactions.yml  versions.sql
dbt/models/forecast/: _source.yml  production_forecasts.sql  resource_forecasts.sql  routing_forecasts.sql  sales_forecasts.sql
dbt/models/forecasts/: _source.yml  production_forecasts.sql  resource_forecasts.sql  routing_forecasts.sql  sales_forecasts.sql
dbt/models/master/: _source.yml  bom_trees.sql  companies.sql  customers.sql  finished_goods.sql  items.sql  lines.sql  materials.sql  routings.sql  storages.sql  times.sql  versions.sql
dbt/models/masters/: _source.yml  bom_trees.sql  companies.sql  customers.sql  finished_goods.sql  items.sql  lines.sql  materials.sql  routings.sql  storages.sql  times.sql  versions.sql
dbt/models/transaction/: _config.yml  _source.yml  transactions.sql
dbt/models/transactions/: _source.yml  transactions.sql
dbt/seeds/forecast/: production_forecasts.csv  production_forecasts_raw.csv  resource_forecasts.csv  resource_forecasts_raw.csv  routing_forecasts.csv  sales_forecasts.csv  sales_forecasts_raw.csv
dbt/seeds/master/: bom_trees.csv  companies_master.csv  customers_master.csv  dates_master.csv  finished_goods_master.csv  item_types.csv  items_master.csv  lines_master.csv  locations.csv  locations_master.csv  materials.csv  months_master.csv  plants_master.csv  retailers_master.csv  routings_master.csv  storages_master.csv  suppliers_master.csv  versions_master.csv  years_master.csv
dbt/seeds/transaction/: _config.yml  transaction_types_master.csv  transactions.csv  transactions_raw.csv
pipelines/load_masterdata/: dataset.py  main.py  pyproject.toml  requirements.txt
pipelines/save_masterdata_to_drive/: main.py  pyproject.toml  requirements.txt
webcli/: Dockerfile  Makefile  app.py  hello.py  navigation.toml  pyproject.toml
webcli/.streamlit/: config.toml
webcli/genai/: __init__.py  agent.py  functions.py  main.py
webcli/libs/: __init__.py  actions.py  cache.py  datahub.py  functions.py  store.py  typing.py
webcli/libs/genai/: agent.py  (+3 more)
webcli/templates/: bq_schema.md  event.md  sample_event.json  sample_strategy.json  schema_event.json  schema_strategy.json  strategy.md  workflow_strategy.md
(+77 files in other folders)
