[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dbt-bigquery>=1.9.1",
  "dbt-duckdb>=1.9.1",
  "fsspec>=2024.12.0",
  "s3fs>=2024.12.0",
]

[dependency-groups]
dev = [
    "elementary-data[bigquery]>=0.16.1",
    "setuptools>=75.8.0",
]
