[project]
name = "webcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.9.0",
    "dbt-duckdb>=1.9.1",
    "duckdb>=1.1.3",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "watchdog>=6.0.0",
]
