[project]
name = "webcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "google-cloud-aiplatform>=1.78.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "vega-datasets>=0.9.0",
    "watchdog>=6.0.0",
]
